updated app with leaderboard and menu
